@@ -1,3 +1,7 @@
+2007-09-26  U.Nakamura  <usa@garbagecollect.jp>
+	* hiki/command.rb: raise SessionError instead of PermissionError
+	in case of session errors.
+
 2007-09-25  Kazuhiko  <kazuhiko@fdiary.net>
 	* hiki/db/flatfile.rb, hiki.cgi, hiki/xmlrpc.rb,
 	misc/webrick/hikilet.rb: use HikiDB_dbtype as the name of the
